fixed homepage table overflow issue

--- a/pro-ctcae/web/src/main/webapp/css/table_menu.css
+++ b/pro-ctcae/web/src/main/webapp/css/table_menu.css
@@ -32,7 +32,6 @@ table.widget tr {
 }
 
 td.data {
-    white-space: nowrap;
     text-align: center;
 }
 
